--- a/BulkSenderSMTP/Windows/MainWindow.xaml
+++ b/BulkSenderSMTP/Windows/MainWindow.xaml
@@ -44,22 +44,22 @@
             <Label Content="Password:"/>
             <PasswordBox Width="150" Height="25"/>
         </StackPanel>
-        <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal">
-            <ListView Width="180" Margin="0,0,10,0">
-            </ListView>
-            <ListView >
-            </ListView>
-        </StackPanel>
+        <Grid  Grid.Row="2" Grid.Column="1" Margin="0,0,5,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="180"/>
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <ListView x:Name="listVAddress" Padding="5" />
+            <ListView x:Name="listVMessage" Grid.Column="1" Margin="10,0,10,0"/>
+        </Grid>
         <Grid Grid.Row="2" Grid.Column="2" >
             <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <StackPanel>
-                <Button Content="Загрузить"/>
-                <Button x:Name="btn_extractView" Click="btn_extractView_Click" >
-                    <TextBlock TextAlignment="Center">Извлечь<LineBreak/>адресс</TextBlock>
-                </Button>
+                <Button x:Name="btn_LoadCSV" Content="Load" Click="btn_LoadCSV_Click"/>
+                <Button x:Name="btn_extractView" Content="Extract email" Click="btn_extractView_Click" />
             </StackPanel>
             <Button Grid.Row="1" VerticalAlignment="Bottom" Content="Разослать" />
         </Grid>
