--- a/BulkSenderSMTP/Windows/MainWindow.xaml
+++ b/BulkSenderSMTP/Windows/MainWindow.xaml
@@ -20,6 +20,13 @@
             <Setter Property="Margin" Value="0,0,15,0"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
         </Style>
+        <Style TargetType="Label">
+            <Setter Property="FontSize" Value="13"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="Height" Value="25"/>
+        </Style>
     </Window.Resources>
     <Grid DockPanel.Dock="Top" >
         <Grid.RowDefinitions>
@@ -36,21 +43,29 @@
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal" Margin="2,2,2,10">
             <Label Content="Server:"/>
-            <TextBox Width="150" Height="25"/>
+            <TextBox Width="150" />
             <Label Content="Port:"/>
-            <TextBox Width="30" Height="25"/>
+            <TextBox Width="30" />
             <Label Content="Login:"/>
-            <TextBox Width="180" Height="25"/>
+            <TextBox Width="180" />
             <Label Content="Password:"/>
-            <PasswordBox Width="150" Height="25"/>
+            <PasswordBox Width="150" />
         </StackPanel>
         <Grid  Grid.Row="2" Grid.Column="1" Margin="0,0,5,0">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition Height="40"/>
+            </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="180"/>
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <ListView x:Name="listVAddress" Padding="5" />
             <ListView x:Name="listVMessage" Grid.Column="1" Margin="10,0,10,0"/>
+            <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal">
+                <Label Content="Subject" />
+                <TextBox Width="500"/>
+            </StackPanel>
         </Grid>
         <Grid Grid.Row="2" Grid.Column="2" >
             <Grid.RowDefinitions>
@@ -61,7 +76,7 @@
                 <Button x:Name="btn_LoadCSV" Content="Load" Click="btn_LoadCSV_Click"/>
                 <Button x:Name="btn_extractView" Content="Extract email" Click="btn_extractView_Click" />
             </StackPanel>
-            <Button Grid.Row="1" VerticalAlignment="Bottom" Content="Разослать" />
+            <Button x:Name="Send" Grid.Row="1" VerticalAlignment="Bottom" Content="Разослать" Click="Send_Click" />
         </Grid>
     </Grid>
 </Window>
