--- a/BulkSenderSMTP/Windows/MainWindow.xaml
+++ b/BulkSenderSMTP/Windows/MainWindow.xaml
@@ -19,19 +19,18 @@
             <Setter Property="FontSize" Value="13"/>
             <Setter Property="Margin" Value="0,0,15,0"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Height" Value="25"/>
         </Style>
         <Style TargetType="Label">
-            <Setter Property="FontSize" Value="13"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontWeight" Value="SemiBold" />
             <Setter Property="VerticalAlignment" Value="Center"/>
-        </Style>
-        <Style TargetType="TextBox">
-            <Setter Property="Height" Value="25"/>
         </Style>
     </Window.Resources>
     <Grid DockPanel.Dock="Top" >
         <Grid.RowDefinitions>
             <RowDefinition Height="10"/>
-            <RowDefinition Height="40"/>
+            <RowDefinition Height="45"/>
             <RowDefinition/>
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
@@ -41,16 +40,27 @@
             <ColumnDefinition Width="120"/>
             <ColumnDefinition Width="10"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal" Margin="2,2,2,10">
-            <Label Content="Server:"/>
-            <TextBox Width="150" />
-            <Label Content="Port:"/>
-            <TextBox Width="30" />
-            <Label Content="Login:"/>
-            <TextBox Width="180" />
-            <Label Content="Password:"/>
-            <PasswordBox Width="150" />
-        </StackPanel>
+        <Grid Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,0,6,6">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Label Grid.Column="0" Content="Server:"/>
+            <TextBox Grid.Column="1" x:Name="tbServer" />
+            <Label Grid.Column="2" Content="Port:"/>
+            <TextBox Grid.Column="3" x:Name="tbPort"  />
+            <Label Grid.Column="4" Content="Login:"/>
+            <TextBox Grid.Column="5" x:Name="tbLogin"  />
+            <Label Grid.Column="6" Content="Password:"/>
+            <PasswordBox Grid.Column="7" x:Name="pbPassword" Height="25"/>
+        </Grid>
+  
         <Grid  Grid.Row="2" Grid.Column="1" Margin="0,0,5,0">
             <Grid.RowDefinitions>
                 <RowDefinition />
@@ -62,10 +72,21 @@
             </Grid.ColumnDefinitions>
             <ListView x:Name="listVAddress" Padding="5" />
             <ListView x:Name="listVMessage" Grid.Column="1" Margin="10,0,10,0"/>
-            <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal">
-                <Label Content="Subject" />
-                <TextBox Width="500"/>
-            </StackPanel>
+            
+            <Grid Grid.Row="1" Grid.ColumnSpan="2" Height="45" Margin="0,0,10,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="3*" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+                <Label Grid.Column="0" Content="Subject: " />
+                <TextBox Grid.Column="1" x:Name="tbSubject" />
+                <Label Grid.Column="2" Content="From: " />
+                <TextBox Grid.Column="3" x:Name="tbFrom" />
+                <CheckBox Grid.Column="4" x:Name="cbSSL" Content="SSL" VerticalAlignment="Center" VerticalContentAlignment="Center" FontSize="14"/>
+            </Grid>
         </Grid>
         <Grid Grid.Row="2" Grid.Column="2" >
             <Grid.RowDefinitions>
@@ -74,9 +95,11 @@
             </Grid.RowDefinitions>
             <StackPanel>
                 <Button x:Name="btn_LoadCSV" Content="Load" Click="btn_LoadCSV_Click"/>
-                <Button x:Name="btn_extractView" Content="Extract email" Click="btn_extractView_Click" />
+                <Button x:Name="btn_extractView" Content="Ext address" Click="btn_extractView_Click" />
             </StackPanel>
-            <Button x:Name="Send" Grid.Row="1" VerticalAlignment="Bottom" Content="Разослать" Click="Send_Click" />
+            <StackPanel Grid.Row="1" VerticalAlignment="Bottom">
+                <Button x:Name="btn_Send"  VerticalAlignment="Bottom" Content="Send" Click="Send_Click" />
+            </StackPanel>
         </Grid>
     </Grid>
 </Window>
