--- a/BulkSenderSMTP/Windows/MainWindow.xaml
+++ b/BulkSenderSMTP/Windows/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:BulkSenderSMTP"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
+        xmlns:gif="http://wpfanimatedgif.codeplex.com"
         Title="MainWindow" Height="550" Width="780">
     <Window.Resources>
         <Style TargetType="Button">
@@ -58,7 +59,7 @@
             <Label Grid.Column="4" Content="Login:"/>
             <TextBox Grid.Column="5" x:Name="tbLogin"  />
             <Label Grid.Column="6" Content="Password:"/>
-            <PasswordBox Grid.Column="7" x:Name="pbPassword" Height="25"/>
+            <PasswordBox Grid.Column="7" x:Name="pbPassword" Height="25" VerticalContentAlignment="Center"/>
         </Grid>
   
         <Grid  Grid.Row="2" Grid.Column="1" Margin="0,0,5,0">
@@ -70,7 +71,7 @@
                 <ColumnDefinition Width="180"/>
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <ListView x:Name="listVAddress" Padding="5" />
+            <ListView x:Name="listVAddress" />
             <ListView x:Name="listVMessage" Grid.Column="1" Margin="10,0,10,0"/>
             
             <Grid Grid.Row="1" Grid.ColumnSpan="2" Height="45" Margin="0,0,10,0">
@@ -85,19 +86,21 @@
                 <TextBox Grid.Column="1" x:Name="tbSubject" />
                 <Label Grid.Column="2" Content="From: " />
                 <TextBox Grid.Column="3" x:Name="tbFrom" />
-                <CheckBox Grid.Column="4" x:Name="cbSSL" Content="SSL" VerticalAlignment="Center" VerticalContentAlignment="Center" FontSize="14"/>
+                <CheckBox Grid.Column="4" x:Name="cbSSL" Content="SSL" VerticalAlignment="Center" VerticalContentAlignment="Center" FontSize="14" IsEnabled="False"/>
             </Grid>
         </Grid>
         <Grid Grid.Row="2" Grid.Column="2" >
             <Grid.RowDefinitions>
                 <RowDefinition/>
+                <RowDefinition />
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <StackPanel>
                 <Button x:Name="btn_LoadCSV" Content="Load" Click="btn_LoadCSV_Click"/>
                 <Button x:Name="btn_extractView" Content="Ext address" Click="btn_extractView_Click" />
             </StackPanel>
-            <StackPanel Grid.Row="1" VerticalAlignment="Bottom">
+            <Image x:Name="ImgSend" Grid.Row="1" gif:ImageBehavior.AnimatedSource="\Img\tenor-2.gif" Visibility="Hidden"/>
+            <StackPanel Grid.Row="2" VerticalAlignment="Bottom">
                 <Button x:Name="btn_Send"  VerticalAlignment="Bottom" Content="Send" Click="Send_Click" />
             </StackPanel>
         </Grid>
