--- a/BulkSenderSMTP/Windows/AddressExtractor.xaml
+++ b/BulkSenderSMTP/Windows/AddressExtractor.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BulkSenderSMTP.Windows"
         mc:Ignorable="d"
-        Title="AddressExtractor" Height="500" Width="400">
+        Icon="\Img\mail-send.ico"
+        Title="&lt; &gt; AddressExtractor" Height="500" Width="400">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="10"/>
